# signals

./: .gitignore  CMakeLists.txt  GenerateProjectFiles_vs2019.bat  README.md  optional.hpp  signals.hpp  signals2.hpp
.github/workflows/: ccpp.yml
examples/: CMakeLists.txt
examples/aggregate_values/: CMakeLists.txt  aggregate_values.cpp
examples/blocked_slots/: CMakeLists.txt  blocked_slots.cpp
examples/connection_management/: CMakeLists.txt  connection_management.cpp
examples/connections/: CMakeLists.txt  connections.cpp
examples/delegates/: CMakeLists.txt  delegates.cpp
examples/disconnect_slots/: CMakeLists.txt  disconnect_slots.cpp
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/maximum_value/: CMakeLists.txt  maximum_value.cpp
examples/member_functions/: CMakeLists.txt  member_functions.cpp
examples/multiple_slots/: CMakeLists.txt  multiple_slots.cpp
examples/return_values/: CMakeLists.txt  return_values.cpp
examples/scoped_connection/: CMakeLists.txt  scoped_connection.cpp
examples/signal_aliases/: CMakeLists.txt  signal_aliases.cpp
examples/slot_arguments/: CMakeLists.txt  slot_arguments.cpp
tests/: CMakeLists.txt  connection_tests.cpp  cow_tests.cpp  signal_tests.cpp  slot_tests.cpp  test1.cpp  tests_common.cpp  tests_common.hpp
