cmake_minimum_required( VERSION 3.17.0 ) # Latest version of CMake when this file was created.

project( examples )

add_subdirectory( hello_world )
add_subdirectory( multiple_slots )
add_subdirectory( slot_arguments )
add_subdirectory( return_values )
add_subdirectory( maximum_value )
add_subdirectory( aggregate_values )
add_subdirectory( member_functions )
add_subdirectory( connection_management )
